# pico-projects

./: .gitignore  CMakeLists.txt
serialBuffer/: CMakeLists.txt  README.md  fifo.c  fifo.h  main.c
serialBuffer/Doc/: SerialBuffer.docx  SerialBuffer.odt  main-dualChannel.c
serialBuffer/Doc/SportIdent/: SISRR1AP serial data record.doc
serialBuffer/Doc/TinyMesh/: TinymeshDetect.c
serialBufferTest/: SerialTest.py  generatePunches.py
